--- a/curricula/self_paced/outline.ipynb
+++ b/curricula/self_paced/outline.ipynb
@@ -69,8 +69,38 @@
     "    - the `tuple` data structure\n",
     "    - f-string formatting\n",
     "- Git:\n",
-    "    - pushing a local repository to GitHub"
+    "    - pushing a local repository to GitHub\n",
+    "    \n",
+    "### 2. Using Python Packages -- part_2\n",
+    "\n",
+    "#### 2a. [First Python Package](part_2/z230_p2a.ipynb)\n",
+    "- Code Organization:\n",
+    "    - modules\n",
+    "    - packages\n",
+    "    - code refactoring\n",
+    "    - function docstrings\n",
+    "    -`__pycache__`\n",
+    "    - `gitignore`\n",
+    "    - `__init__`\n",
+    "- Python Concepts:\n",
+    "    - keyword arguments\n",
+    "    - `import` statements\n",
+    "    - list comprehension\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
