--- a/curricula/self_paced/part_2/z230_p2a.ipynb
+++ b/curricula/self_paced/part_2/z230_p2a.ipynb
@@ -73,7 +73,7 @@
     "    $$ HI = a + (b * t) + (c * h) + (d * t * h) + (e * t^2) + (f * h^2) + (g * t^2 * h) + (h * t * h^2) + (i * t^2 * h^2)$$\n",
     "    \n",
     "\n",
-    "    where *HI* is the Heat Index, *t* represents Temperature is in degrees F, *h* represents Humidity in %, *a* = -42.379, *b* = 2.04901523, *c* = 10.14333127, *d* = 0.22475541, *e* = 0.00683783, *f* = 0.05481717, *g* = 0.00122874, *h* = 0.00085282, and *i* = 0.00000199. The Roothfusz regression is not valid for extreme temperature or hummidity conditions.\n",
+    "    where *HI* is the Heat Index, *t* represents temperature in degrees F, *h* represents humidity in %, *a* = -42.379, *b* = 2.04901523, *c* = 10.14333127, *d* = 0.22475541, *e* = 0.00683783, *f* = 0.05481717, *g* = 0.00122874, *h* = 0.00085282, and *i* = 0.00000199. The Roothfusz regression is not valid for extreme temperature or hummidity conditions.\n",
     "\n",
     "    Replace the `compute_windchill` function in your new file with a `compute_heatindex` function:\n",
     "   \n",
