--- a/curricula/self_paced/outline.ipynb
+++ b/curricula/self_paced/outline.ipynb
@@ -74,33 +74,25 @@
     "### 2. Using Python Packages -- part_2\n",
     "\n",
     "#### 2a. [First Python Package](part_2/z230_p2a.ipynb)\n",
-    "- Code Organization:\n",
-    "    - modules\n",
-    "    - packages\n",
+    "- Python Organization:\n",
     "    - code refactoring\n",
     "    - function docstrings\n",
-    "    -`__pycache__`\n",
+    "    - modules\n",
+    "    - packages\n",
+    "    - `__pycache__`\n",
     "    - `gitignore`\n",
     "    - `__init__`\n",
     "- Python Concepts:\n",
     "    - keyword arguments\n",
     "    - `import` statements\n",
-    "    - list comprehension\n"
+    "    - list comprehension\n",
+    "\n",
+    "#### 2b. [Importing an External Package (math)](part_2/z230_p2b.ipynb)\n",
+    "- Python Concepts:\n",
+    "    - importing external packages\n",
+    "    - the `math` package\n",
+    "    - `math.log`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
