--- a/curricula/self_paced/outline.ipynb
+++ b/curricula/self_paced/outline.ipynb
@@ -91,7 +91,11 @@
     "- Python Concepts:\n",
     "    - importing external packages\n",
     "    - the `math` package\n",
-    "    - `math.log`"
+    "    - `math.log`\n",
+    "    \n",
+    "#### 2c. [The Numpy Package](part_2/z230_p2c.ipynb)\n",
+    "- Python Concepts:\n",
+    "    - the `numpy` package"
    ]
   }
  ],
