--- a/curricula/self_paced/part_2/z230_p2b.ipynb
+++ b/curricula/self_paced/part_2/z230_p2b.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "18. [git] Add and commit `computation.py`\n",
+    "2. [git] Add and commit `computation.py`\n",
     "   (`git commit -m \"Function for Computing DPT\"`)"
    ]
   },
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "19. [bash] Make a copy of your second script:\n",
+    "3. [bash] Make a copy of your second script:\n",
     "   \n",
     "   ```bash\n",
     "   $ cp windchillcomp.py dewpointtempcomp.py\n",
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20. [git] Add and commit `dewpointtempcomp.py`\n",
+    "4. [git] Add and commit `dewpointtempcomp.py`\n",
     "   (`git commit -m \"Creating a 3rd Script or DPT calculation\"`)"
    ]
   },
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "21. Edit `dewpointtempcomp.py`. Make changes to the import statements to include:\n",
+    "5. Edit `dewpointtempcomp.py`. Make changes to the import statements to include:\n",
     "\n",
     "    ```python\n",
     "    from computation.py import compute_dewpoint\n",
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "22. [git] add and commit\n",
+    "6. [git] add and commit\n",
     "    \n",
     "    ```bash\n",
     "    commit -m \"Computed dew point temperature\"\n",
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "23. Learn more about the math module!\n",
+    "7. Learn more about the math module!\n",
     "\n",
     "    Hopefully since you already imported code from your readdata, printing, and computation modules, importing from an external module `math` seemed a little less intimidating.\n",
     "\n",
@@ -161,7 +161,7 @@
     "\n",
     "That concludes the second lesson of Part 2. \n",
     "\n",
-    "You should now be familiar with importing external modules and some methods within the `math` module - specifically the log method.\n",
+    "You should now be familiar with importing external packages and some methods within the `math` package - specifically the log method.\n",
     "\n",
     "Please continue to [Part 2c](z230_p2c.ipynb)."
    ]
