--- a/curricula/self_paced/outline.ipynb
+++ b/curricula/self_paced/outline.ipynb
@@ -95,7 +95,12 @@
     "    \n",
     "#### 2c. [The Numpy Package](part_2/z230_p2c.ipynb)\n",
     "- Python Concepts:\n",
-    "    - the `numpy` package"
+    "    - the `numpy` package\n",
+    "    \n",
+    "#### 2d. [Plotting](part_2/z230_p2d.ipynb)\n",
+    "- Python Concepts:\n",
+    "    - the `matplotlib` package\n",
+    "    - the"
    ]
   }
  ],
