--- a/curricula/self_paced/outline.ipynb
+++ b/curricula/self_paced/outline.ipynb
@@ -97,10 +97,9 @@
     "- Python Concepts:\n",
     "    - the `numpy` package\n",
     "    \n",
-    "#### 2d. [Plotting](part_2/z230_p2d.ipynb)\n",
+    "#### 2d. [Basic Plotting](part_2/z230_p2d.ipynb)\n",
     "- Python Concepts:\n",
-    "    - the `matplotlib` package\n",
-    "    - the"
+    "    - the `matplotlib` package"
    ]
   }
  ],
