--- a/curricula/self_paced/part_2/z230_p2a.ipynb
+++ b/curricula/self_paced/part_2/z230_p2a.ipynb
@@ -504,7 +504,7 @@
     "\n",
     "You should now be familiar with code refactoring, modules and packages, using the import statement, keyword arguments, function docstrings, some more f-string formatting options, `__pycache__`, `gitignore`, `__init__`, and list comprehensions.\n",
     "\n",
-    "Please continue to [Part 2b]((z230_p2b.ipynb)."
+    "Please continue to [Part 2b](z230_p2b.ipynb)."
    ]
   }
  ],
