--- a/curricula/self_paced/part_2/z230_p2c.ipynb
+++ b/curricula/self_paced/part_2/z230_p2c.ipynb
@@ -27,6 +27,19 @@
     "    And use numpy so you can pass in a list without having to do for loops and zip\n",
     "    convert all 3 scripts to work well with numpy"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------\n",
+    "\n",
+    "That concludes the third lesson of Part 2. \n",
+    "\n",
+    "You should now be familiar with the `numpy` package.\n",
+    "\n",
+    "Please continue to [Part 2d](z230_p2d.ipynb)."
+   ]
   }
  ],
  "metadata": {
