--- a/curricula/self_paced/part_2/z230_p2d.ipynb
+++ b/curricula/self_paced/part_2/z230_p2d.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2d - Plotting\n",
+    "## Part 2d - Basic Plotting\n",
     "--------------------------------------\n",
     "This is intended to pick off right after part 2a - you had just\n",
     "\n",
@@ -20,10 +20,20 @@
     "    conda install matplotlib    \n",
     "    \n",
     "26.     contours of dewpoint, axis of temperature and humidity.\n",
-    "    but they'd need mapping of dewpoint to 2d (or use numpy to generate a new table of temp and humiity that we compute on)\n",
+    "    but they'd need mapping of dewpoint to 2d (or use numpy to generate a new table of temp and humiity that we compute on)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------\n",
     "\n",
-    "27. get a different data set - satellite data LENS data\n",
-    "        take something from the geocat examples (great way to show gallery to recovering NCL users)"
+    "That concludes Part 2. \n",
+    "\n",
+    "You should now be familiar with the `matplotlib` package.\n",
+    "\n",
+    "Please continue to [Part 3](../part_3/z230_p3a.ipynb)."
    ]
   }
  ],
