--- a/curricula/self_paced/part_2/z230_p2c.ipynb
+++ b/curricula/self_paced/part_2/z230_p2c.ipynb
@@ -14,7 +14,68 @@
    "source": [
     "## Part 2c - The Numpy Package\n",
     "--------------------------------------\n",
-    "This is intended to pick off right after part 2c left off - you had just"
+    "This is intended to pick off right after part 2b - you had just used the math module to calculate dew point.\n",
+    "\n",
+    "Now you will use the `numpy` module. `Numpy`is a fundamental package for scientific computation. It is most commonly used to broadcast functions across arrays. Read about `numpy` [here](https://numpy.org/).\n",
+    "\n",
+    "In this section we will convert our computation to use `numpy`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. [conda] Install or update `numpy`\n",
+    "\n",
+    "    First, activate your environment\n",
+    "    \n",
+    "    ```bash\n",
+    "    $ conda activate ncar_python_tutorial\n",
+    "    ```\n",
+    "   \n",
+    "   Then install `numpy`\n",
+    "   \n",
+    "    ```bash\n",
+    "    $ conda install numpy\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. [python] Get familiar with `numpy` by trying a few examples.\n",
+    "\n",
+    "    From the ncar_python_tutorial directory (`cd` into it if need be) create a new file called `numpy_tests.py`.\n",
+    "    \n",
+    "    ```bash\n",
+    "   $ touch numpy_test.py\n",
+    "   ```\n",
+    "   \n",
+    "   ```python \n",
+    "   import numpy\n",
+    "   \n",
+    "   numpy.array\n",
+    "   type\n",
+    "   dtype\n",
+    "   shape\n",
+    "   reshape\n",
+    "   dim\n",
+    "   numpy.zeros\n",
+    "   numpy.ones\n",
+    "   numpy.arange\n",
+    "   numpy.linspace\n",
+    "   \n",
+    "   array math\n",
+    "   numpy.sin\n",
+    "   sum\n",
+    "   min\n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   "
    ]
   },
   {
