--- a/curricula/self_paced/part_2/z230_p2c.ipynb
+++ b/curricula/self_paced/part_2/z230_p2c.ipynb
@@ -54,6 +54,7 @@
     "   \n",
     "   ```python \n",
     "   import numpy\n",
+    "   ```\n",
     "   \n",
     "   numpy.array\n",
     "   type\n",
@@ -84,8 +85,7 @@
    "source": [
     "24. move to numpy\n",
     "    \n",
-    "    Conda install numpy\n",
-    "    And use numpy so you can pass in a list without having to do for loops and zip\n",
+    "    pass in a list without having to do for loops and zip\n",
     "    convert all 3 scripts to work well with numpy"
    ]
   },
