--- a/curricula/self_paced/part_2/z230_p2c.ipynb
+++ b/curricula/self_paced/part_2/z230_p2c.ipynb
@@ -44,6 +44,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "NumPy provides the numerical backend for nearly every scientific or technical library for Python. In fact, NumPy is the foundation library for scientific computing in Python since it provides data structures and high-performing functions that the basic Python standard library cannot provide. Therefore, knowledge of this library is essential in terms of numerical calculations since its correct use can greatly influence the performance of your computations.\n",
+    "\n",
+    "NumPy provides the following additional features:\n",
+    "\n",
+    "Ndarray: A multidimensional array much faster and more efficient than those provided by the basic package of Python. The core of NumPy is implemented in C and provides efficient functions for manipulating and processing arrays.\n",
+    "Element-wise computation: A set of functions for performing this type of calculation with arrays and mathematical operations between arrays.\n",
+    "\n",
+    "Integration with other languages such as C, C++, and FORTRAN: A set of tools to integrate code developed with these programming languages.\n",
+    "\n",
+    "At a first glance, NumPy arrays bear some resemblance to Python’s list data structure. But an important difference is that while Python lists are generic containers of objects:\n",
+    "\n",
+    "NumPy arrays are homogenous and typed arrays of fixed size.\n",
+    "Homogenous means that all elements in the array have the same data type.\n",
+    "Fixed size means that an array cannot be resized (without creating a new array).\n",
+    "\n",
+    "\n",
+    "The NumPy Array Object\n",
+    "The core of the NumPy Library is one main object: ndarray (which stands for N-dimensional array)\n",
+    "This object is a multi-dimensional homogeneous array with a predetermined number of items\n",
+    "In addition to the data stored in the array, this data structure also contains important metadata about the array, such as its shape, size, data type, and other attributes.\n",
+    "\n",
+    "Basic Attributes of the ndarray Class\n",
+    "\n",
+    "Attribute\tDescription\n",
+    "shape\tA tuple that contains the number of elements (i.e., the length) for each dimension (axis) of the array.\n",
+    "size\tThe total number elements in the array.\n",
+    "ndim\tNumber of dimensions (axes).\n",
+    "nbytes\tNumber of bytes used to store the data.\n",
+    "dtype\tThe data type of the elements in the array.\n",
+    "itemsize\tDefines teh size in bytes of each item in the array.\n",
+    "data\tA buffer containing the actual elements of the array.\n",
+    "\n",
+    "data = np.array([[10, 2], [5, 8], [1, 1]])\n",
+    "\n",
+    "type(data)\n",
+    "\n",
+    "data.ndim\n",
+    "\n",
+    "data.size\n",
+    "\n",
+    "data.dtype\n",
+    "\n",
+    "np.sqrt(np.array([0, -1, 2]))\n",
+    "\n",
+    "np.zeros((2, 3))\n",
+    "\n",
+    "np.ones(5)\n",
+    "\n",
+    "x = 10.5 * np.ones(5)\n",
+    "\n",
+    "y = np.full(shape=5, fill_value=10.5)\n",
+    "\n",
+    "\n",
+    "x1 = np.empty(3)\n",
+    "x1.fill(np.pi)\n",
+    "\n",
+    "y = np.linspace(-90., 90., num=180)\n",
+    "x = np.linspace(-180., 180., 360)\n",
+    "\n",
+    "xc, yc = np.meshgrid(x, y)\n",
+    "z = np.sin(xc**2 + yc**2) / np.cos(xc**2 + yc**2)\n",
+    "\n",
+    "\n",
+    "d = np.arange(0, 20, 4)\n",
+    "d\n",
+    "\n",
+    "\n",
+    "Broadcasting allows an operator or a function to act on two or more arrays to operate even if these arrays do not have the same shape. That said, not all the dimensions can be subjected to broadcasting; they must meet certain rules.\n",
+    "\n",
+    "Two arrays can be subjected to broadcasting when all their dimensions are compatible, i.e., the length of each dimension must be equal or one of them must be equal to 1. If neither of these conditions is met, you get an exception that states that the two arrays are not compatible.\n",
+    "\n",
+    "\n",
+    "Broadcasting is the name given to the method that NumPy uses to allow array arithmetic between arrays with a different shape or size.\n",
+    "\n",
+    "Although the technique was developed for NumPy, it has also been adopted more broadly in other numerical computational libraries, such as Theano, TensorFlow, and Octave.\n",
+    "\n",
+    "Broadcasting solves the problem of arithmetic between arrays of differing shapes by in effect replicating the smaller array along the last mismatched dimension.\n",
+    "\n",
+    "NumPy does not actually duplicate the smaller array; instead, it makes memory and computationally efficient use of existing structures in memory that in effect achieve the same result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. [python] Get familiar with `numpy` by trying a few examples.\n",
     "\n",
     "    From the ncar_python_tutorial directory (`cd` into it if need be) create a new file called `numpy_tests.py`.\n",
